--- a/biblio.ipynb
+++ b/biblio.ipynb
@@ -451,54 +451,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 138,
    "id": "d4dcc386-d377-434d-9270-d24a061f233b",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>EU_Sales</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Genre</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Action</th>\n",
-       "      <td>525.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "        EU_Sales\n",
-       "Genre           \n",
-       "Action     525.0"
+       "15.48191756397563"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +469,9 @@
    "source": [
     "# ваш код здесь\n",
     "a=df[['Genre','EU_Sales']]\n",
-    "a.groupby(\"Genre\").sum().sort_values(by=['EU_Sales'], ascending=False).head(1)"
+    "a=a.groupby(\"Genre\").sum()\n",
+    "a.at['Sports', 'EU_Sales']/a[\"EU_Sales\"].sum()*100\n",
+    "\n"
    ]
   },
   {
