--- a/zadanie.ipynb
+++ b/zadanie.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "59bc965d-2d42-4fcd-9da9-2a12724b65ed",
    "metadata": {},
    "outputs": [
@@ -161,7 +161,7 @@
        "4     11.27      8.89     10.22         1.00         31.37  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,111 +261,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 37,
    "id": "8b9e27f2-98d2-40c6-95ab-1d9a8e1a082f",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Rank</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Platform</th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Genre</th>\n",
-       "      <th>Publisher</th>\n",
-       "      <th>NA_Sales</th>\n",
-       "      <th>EU_Sales</th>\n",
-       "      <th>JP_Sales</th>\n",
-       "      <th>Other_Sales</th>\n",
-       "      <th>Global_Sales</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Wii Sports</td>\n",
-       "      <td>Wii</td>\n",
-       "      <td>2006.0</td>\n",
-       "      <td>Sports</td>\n",
-       "      <td>Nintendo</td>\n",
-       "      <td>41.49</td>\n",
-       "      <td>29.02</td>\n",
-       "      <td>3.77</td>\n",
-       "      <td>8.46</td>\n",
-       "      <td>82.74</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Super Mario Bros.</td>\n",
-       "      <td>NES</td>\n",
-       "      <td>1985.0</td>\n",
-       "      <td>Platform</td>\n",
-       "      <td>Nintendo</td>\n",
-       "      <td>29.08</td>\n",
-       "      <td>3.58</td>\n",
-       "      <td>6.81</td>\n",
-       "      <td>0.77</td>\n",
-       "      <td>40.24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>10</td>\n",
-       "      <td>Duck Hunt</td>\n",
-       "      <td>NES</td>\n",
-       "      <td>1984.0</td>\n",
-       "      <td>Shooter</td>\n",
-       "      <td>Nintendo</td>\n",
-       "      <td>26.93</td>\n",
-       "      <td>0.63</td>\n",
-       "      <td>0.28</td>\n",
-       "      <td>0.47</td>\n",
-       "      <td>28.31</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Rank               Name Platform    Year     Genre Publisher  NA_Sales  \\\n",
-       "0     1         Wii Sports      Wii  2006.0    Sports  Nintendo     41.49   \n",
-       "1     2  Super Mario Bros.      NES  1985.0  Platform  Nintendo     29.08   \n",
-       "9    10          Duck Hunt      NES  1984.0   Shooter  Nintendo     26.93   \n",
-       "\n",
-       "   EU_Sales  JP_Sales  Other_Sales  Global_Sales  \n",
-       "0     29.02      3.77         8.46         82.74  \n",
-       "1      3.58      6.81         0.77         40.24  \n",
-       "9      0.63      0.28         0.47         28.31  "
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Action', 877.8299999999916)\n",
+      "('Sports', 683.3499999999967)\n",
+      "('Shooter', 582.599999999995)\n"
+     ]
     }
    ],
    "source": [
     "# ваш код здесь\n",
-    "((df.sort_values(['NA_Sales','Genre'], ascending=[False, False]))).drop_duplicates (subset=['Genre']).head(3)"
+    "a = df[[\"NA_Sales\",\"Genre\"]]\n",
+    "b = {}\n",
+    "for ind in a.index:\n",
+    "    b[df['Genre'][ind]] = df['NA_Sales'][ind] + b.get(df['Genre'][ind],0)\n",
+    "c = sorted(b.items(), key=lambda item: item[1], reverse=True)\n",
+    "for key in c[:3]:\n",
+    "    print(key)"
    ]
   },
   {
@@ -378,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 3,
    "id": "02a967dc",
    "metadata": {},
    "outputs": [
@@ -386,25 +304,25 @@
      "data": {
       "text/plain": [
        "('2005',\n",
-       " Publisher\n",
-       " Electronic Arts    117\n",
+       " Platform\n",
+       " PS2    260\n",
        " Name: count, dtype: int64,\n",
        " '2015',\n",
-       " Publisher\n",
-       " Namco Bandai Games    68\n",
+       " Platform\n",
+       " PS4    137\n",
        " Name: count, dtype: int64)"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "a=df.loc[(df['Year'] == 2005)]\n",
-    "a=a.Publisher.value_counts().head(1)\n",
+    "a=a.Platform.value_counts().head(1)\n",
     "b=df.loc[(df['Year'] == 2015)]\n",
-    "b=b.Publisher.value_counts().head(1)\n",
+    "b=b.Platform.value_counts().head(1)\n",
     "'2005',a,'2015',b"
    ]
   },
